# mlx-forge

./: .gitignore  .intendant.toml  .pre-commit-config.yaml  .suzerain.toml  CHANGELOG.md  CLAUDE.md  README.md  commitlint.config.mjs  pyproject.toml
.claude/skills/mlx-recipe/: SKILL.md
.github/workflows/: ci.yml  release-please.yml  relock-on-release.yml
docs/: conversion.md  quantization.md  splitting.md
docs/adr/: 0000-adopt-intendant.md
docs/models/: ernie-image.md  fish-s2-pro.md  ltx-2.3.md  matrix-game-3.0.md  mistral-small-3.1.md  mistral-small.md  qwen-image-2512.md  vjepa-2.md
docs/superpowers/plans/: 2026-04-25-delta-workflow-improvements.md
docs/superpowers/specs/: 2026-04-25-delta-workflow-improvements-design.md
src/mlx_forge/: __init__.py  cli.py  convert.py  quantize.py  split.py  transpose.py  upload.py  validate.py
src/mlx_forge/recipes/: __init__.py  cogvideo_fun.py  cogvideox_fun_v1_5_5b_inp.py  ernie_image.py  ernie_image_pe.py  fish_s2.py  hunyuan3d_21.py  ideogram_4.py  ltx23.py  ltx_23.py  matrix_game_3.py  matrix_game_3_0.py  mistral_small.py  mistral_small_31.py  qwen_image_2512.py  vjepa2_vit_l_rope.py  vjepa2_vitl.py  vjepa_2_0_vitl.py  vjepa_2_1_vitl.py  void_model.py
src/mlx_forge/templates/: model-card.md.j2
tests/: test_cli.py  test_cogvideox_config_copy.py  test_config_copy_strictness.py  test_fish_s2_keys.py  test_hunyuan3d_keys.py  test_integration.py  test_ltx23_delta.py  test_ltx23_keys.py  test_ltx23_lora.py  test_matrix_game_keys.py  test_mistral_small_keys.py  test_quantize.py  test_qwen_image_2512_keys.py  test_security.py  test_split.py  test_transpose.py  test_upload.py  test_validate.py
