[project]
name = "mlx-forge"
version = "0.1.0"
description = "Convert, quantize, split, and validate ML models for Apple MLX"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mlx", "apple-silicon", "quantization", "model-conversion", "safetensors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.26.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
]

[project.scripts]
mlx-forge = "mlx_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
