[project]
name = "mlx-forge"
version = "0.1.0"
description = "Convert, quantize, split, and validate ML models for Apple MLX"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Damien Grauet", email = "damien.grauet@gmail.com" },
]
keywords = ["mlx", "apple-silicon", "quantization", "model-conversion", "safetensors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.31.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.26.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "hf-xet>=1.3.2",
]

[project.urls]
Repository = "https://github.com/dgrauet/mlx-forge"
Issues = "https://github.com/dgrauet/mlx-forge/issues"
Documentation = "https://github.com/dgrauet/mlx-forge/tree/main/docs"

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
    "pre-commit>=3.5",
]

[project.scripts]
mlx-forge = "mlx_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
